refactor(function): 重构功能模块接口和数据访问层
- 替换过时的API注解为新版本注解，包括Swagger相关注解
- 修改函数返回类型从String树到Long树，统一数据类型
- 更新SelectVO为SelectIdNameVO以提供更准确的数据结构
- 移除过时的Mapper XML文件和相关方法实现
- 优化参数验证方式，使用@Validated和@NotNull替代手动验证
- 更新树形结构查询逻辑，使用新的查询构建器方式
- 重构客户端菜单树生成逻辑，简化复杂度
- 统一接口返回格式，提高API一致性
- 优化数据库查询性能，减少不必要的关联查询
- 更新代码注释和文档描述，提供更清晰的说明